# gstrtpvc2

./: AUTHORS  README  configure.ac
src/: Makefile.am  gstrtp.c  gstrtpvc2depay.c  gstrtpvc2depay.h  gstrtpvc2pay.c  gstrtpvc2pay.h  vc2vlcparse.c  vc2vlcparse.h
